[package]
name = "rustle"
version = "0.1.0"
authors = ["sean billig <sean.billig@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.10"
clap = "~2.32.0"
futures-preview = "0.3.0-alpha.14"
hex = "0.3"
romio = "0.3.0-alpha.6"
serde = "~1.0.90"
serde_derive = "~1.0.90"
serde_json = "~1.0.39"
shs_async = "0.3.0"
ssb-crypto = "0.1.2"
boxstream = { git = "https://github.com/sunrise-choir/boxstream", rev = "0dad7c2" }
packetstream = { git = "https://github.com/sunrise-choir/packetstream", rev = "6105bc9" }
