[package]
name = "rustle"
version = "0.1.0"
authors = ["sean billig <sean.billig@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.10"
clap = "~2.32.0"
futures-preview = "0.3.0-alpha.16"
hex = "0.3"
romio = "0.3.0-alpha.8"
serde = "~1.0.90"
serde_derive = "~1.0.90"
serde_json = "~1.0.39"
ssb-crypto = "~0.1.3"
ssb-handshake = { git = "https://github.com/sunrise-choir/shs_core", rev = "5931e43" }
ssb-boxstream = { git = "https://github.com/sunrise-choir/boxstream", rev = "a8b9d08" }
packetstream = { git = "https://github.com/sunrise-choir/packetstream", rev = "0b7f4c5" }
