[package]
name = "ssb-legacy-msg-data"
version = "0.1.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]

[dependencies]
serde = "1.0.80"
serde_derive = "1.0.80"
base64 = "0.9.3"
indexmap = "1.0.1"
ryu-ecmascript = "0.1.1"
# strtod = "0.0.2"
strtod = { git = "https://github.com/ssbrs/strtod" }
encode_unicode = "0.3.3"
