[package]
name = "rustle"
version = "0.1.0"
authors = ["sean billig <sean.billig@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.10"
clap = "~2.32.0"
futures-preview = "0.3.0-alpha.16"
flumedb = { git = "https://github.com/sunrise-choir/flumedb-rs" }
hex = "0.3"
romio = "0.3.0-alpha.8"
serde = "~1.0.90"
serde_derive = "~1.0.90"
serde_json = "~1.0.39"
snafu = { version = "0.4.1", features = ["unstable-futures"] }
ssb-crypto = "~0.1.3"
ssb-handshake = "0.4.0"
ssb-boxstream = "0.1.0"
ssb-packetstream = { version = "0.1.0", path = "../ssb-packetstream" }
uuid = { version = "0.7", features = ["v4"] }