[package]
name = "rustle"
version = "0.1.0"
authors = ["sean billig <sean.billig@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.10"
clap = "~2.32.0"
futures = { version = "0.3.1", features = ["thread-pool"] }
flumedb = { git = "https://github.com/sunrise-choir/flumedb-rs" }
hex = "0.3"
serde = "~1.0.90"
serde_derive = "~1.0.90"
serde_json = "~1.0.39"
snafu = { version = "0.6.0", features = ["futures"] }
ssb-boxstream = {path = "../../ssb-boxstream"}
ssb-crypto = "~0.1.3"
ssb-db = {path= "../../ssb-db"}
ssb-handshake = "0.5.0"
ssb-multiformats = { git = "https://github.com/sunrise-choir/ssb-multiformats"}
ssb-packetstream = { version = "0.1.0", path = "../ssb-packetstream" }
ssb-publish = { git = "https://github.com/sunrise-choir/ssb-publish", version = "0.3.0"}
ssb-verify-signatures = {path= "../../ssb-verify-signatures"}
ssb-validate = {path= "../../ssb-validate"}
uuid = { version = "0.7", features = ["v4"] }
async-std = "1.1.0"
