[package]
name = "ssb-legacy-msg"
version = "0.1.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
ssb-legacy-msg-data = { path = "../legacy-msg-data" }
ssb-multiformats = { path = "../ssb-multiformats" }
serde = {version = "1.0.92", features = ["derive"] }
strtod = { git = "https://github.com/ssbrs/strtod" }
crypto-hash = "0.3.3"
